# darpa_ugv_highlevel

./: .gitignore  .travis.yml  DOCKERFILE  build_docker.sh  readme.md  run_docker.sh  submit.sh
amapper/: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
apriltag_coordinates/: CMakeLists.txt  README.md  package.xml
apriltag_origin/: CMakeLists.txt  README.md  package.xml
artifact_reporter/: CMakeLists.txt  package.xml
artifact_reporter/launch/: artifact_reporter.launch
artifact_reporter/scripts/: artifact_origin_tf.py
artifact_reporter/src/: report_artifact_spam.cpp
darpa_dashboard_rviz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
darpa_dashboard_rviz/rviz/: config.rviz
darpa_dashboard_rviz/src/: artifact_panel.cpp  artifact_panel.h  artifact_robot.cpp  artifact_robot.h  constants.cpp  constants.h  init_panel.cpp  init_panel.h  init_robot.cpp  init_robot.h  lora_panel.cpp  lora_panel.h  lora_robot.cpp  lora_robot.h  status_panel.cpp  status_panel.h  terminal_panel.cpp  terminal_panel.h  terminal_robot.cpp  terminal_robot.h  twist_panel.cpp  twist_panel.h  twist_robot.cpp  twist_robot.h
data_compresor/: CMakeLists.txt  package.xml  readme.md
drone_obstacle_avoidance/: README.md
drone_obstacle_avoidance/aerial_obstacle_avoidance/: CMakeLists.txt  package.xml
drone_obstacle_avoidance/aerial_obstacle_avoidance/launch/: aerial_obstacle_avoidance.launch  pub_waypoints.launch
drone_obstacle_avoidance/aerial_obstacle_avoidance/src/: apf_planner.cpp  pub_waypoint.cpp
exploration_goal/: CMakeLists.txt  package.xml  readme.md
exploration_goal/include/exploration_goal/: frontier_graph.h  global_graph_merge.h  goal_selector.h
exploration_goal/launch/: drone.launch  exploration_goal.launch  robot.launch  teambase.launch  u1.launch  uav.launch  x1.launch  x2.launch
exploration_goal/scripts/: defecate.py  launch_selector.py  pantilt.py  robot_rssi_client.py  teambase_master.py  teambase_rssi_pinger.py  u1_start.py  x2_start.py
exploration_goal/src/: amapper_based_explorer.cpp  exploration_goal_node.cpp  get_ur_ass_inside_cave.cpp  global_graph_node.cpp  graph_visualization_node.cpp  path_planning.cpp
exploration_goal/test/: test_cases.h  test_graph_merging.cpp
findred/: CMakeLists.txt  package.xml
gazebo_shim/: CMakeLists.txt  package.xml
global_planner/: CMakeLists.txt  package.xml
graph_colouring/: CMakeLists.txt  README.md  package.xml
graph_colouring/src/: graph_colouring.cpp
h_comms/: .gitignore  README.md
h_comms/noroute_mesh/: CMakeLists.txt  package.xml
h_comms/noroute_mesh/Scripts/: msg_converter.py
h_comms/noroute_mesh/eth/: Eth.cpp  Eth.hpp
h_comms/noroute_mesh/include/: checksum.h
h_comms/noroute_mesh/launch/: comms_node.launch  converter_service.launch
h_comms/noroute_mesh/lib/: crc32.c
h_comms/noroute_mesh/msg/: neighbArray.msg
h_comms/noroute_mesh/node/: Node.cpp  Node.hpp
h_comms/noroute_mesh/src/: main.cpp
h_comms/noroute_mesh/srv/: map_to_string.srv  neighbour.srv  send_artifact.srv  send_map.srv  string_to_map.srv
h_comms/noroute_mesh/utilities/: serialisers.cpp  serialisers.hpp
integrate/: CMakeLists.txt  package.xml
interface_protocol/: CMakeLists.txt  README.md  package.xml
lidar_frontier3d/: CMakeLists.txt  package.xml
loam_tf_fixer/: CMakeLists.txt  package.xml
loam_velodyne/: CMakeLists.txt  README.md
localization_manager/: CMakeLists.txt  package.xml
management_gui/rqt_example/: CMakeLists.txt  package.xml  plugin.xml  setup.py
management_gui/rqt_example/include/rqt_example/: example.h
management_gui/rqt_example/launch/: rqt_example.launch
management_gui/rqt_example/resource/: resources.qrc
management_gui/rqt_example/scripts/: rqt_example
management_gui/rqt_example/src/rqt_example/: example.cpp  example.ui  hack.py
map_merge/: CMakeLists.txt  package.xml
mission_planner/: CMakeLists.txt  package.xml  readme.md
mission_planner/include/mission_planner/: Config.h  CustomGraphicsScene.h  DarpaServerThread.h  EStopButton.h  MainWindow.h  MainWindow.ui  Robot.h  RosThread.h
mission_planner/launch/: mission_planner_darpa.launch
mission_planner/src/: CustomGraphicsScene.cpp  DarpaServerThread.cpp  EStopButton.cpp  MainWindow.cpp  Robot.cpp  RosThread.cpp  main.cpp
obstacle_avoidance_test/: CMakeLists.txt  package.xml  requirements.txt  stereo.launch
ogv_urdf/: CMakeLists.txt  package.xml  readme.md
ogv_urdf/launch/: ogv_urdf.launch  view_d435_model.launch  view_ogv_body.launch  view_ogv_urdf_rviz.launch
ogv_urdf/urdf/: ogv.urdf.xacro  ogv_body.urdf.xacro  test_d435_camera.urdf.xacro
phy_planner/: CMakeLists.txt  package.xml  plugin_description.xml  roughness_layer.xml
plot_dots/: CMakeLists.txt  lidar_visualisation_2.rviz  package.xml
point_cloud_preprocess/: CMakeLists.txt  package.xml
pointcloud_filters/: CMakeLists.txt  package.xml
pointcloud_to_laserscan/: CMakeLists.txt
realsense_normal_estimate/: CMakeLists.txt  package.xml
rgbd_object_detection/: readme.md
rgbd_object_detection/object_detection/: CMakeLists.txt  package.xml
rgbd_object_detection/object_detection/config/: object_detector_config.yaml  ros_config.yaml
rgbd_object_detection/object_detection/launch/: obj_det.launch  object_detection.launch
rgbd_object_detection/object_detection/msg/: DetectedObjectMsg.msg
rgbd_object_detection/object_detection/src/: detection_node.py
rgbd_object_detection/object_detection/src/object_detectors/: darknet_object_detector.py  detected_object.py  object_detector_main.py
rgbd_object_detection/object_detection/src/utils/: utils.py
robot_localization/: CMakeLists.txt
rosmsg_compressor/: CMakeLists.txt  package.xml  readme.md
rosmsg_compressor/include/rosmsg_compressor/: rosmsg_serializer.h  zip.h
rosmsg_compressor/src/: sample_node.cpp
simple_obstacle_avoidance/: CMakeLists.txt  package.xml
thermal_camera/: CMakeLists.txt  package.xml
thermal_camera/include/: ThermalPointCloudMapper.h
thermal_camera/src/: ThermalPointCloudMapper.cpp  api.cpp  getThermalImage.cpp  main.cpp  thermal_camera_node.cpp
(+760 files in other folders)
