<?xml version="1.0"?>
<package format="2">
  <name>artifact_reporter</name>
  <version>0.0.0</version>
  <description>The artifact_reporter package</description>

  <maintainer email="hashir@todo.todo">hashir</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>object_detection</build_depend>
  <build_depend>subt_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>subt_communication_broker</build_depend>
  <build_depend>subt_ign</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <build_export_depend>object_detection</build_export_depend>
  <build_export_depend>subt_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>subt_communication_broker</build_export_depend>
  <build_export_depend>subt_ign</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>object_detection</exec_depend>
  <exec_depend>subt_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>subt_communication_broker</exec_depend>
  <exec_depend>subt_ign</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
