<?xml version="1.0"?>
<package format="2">
  <name>mission_planner</name>
  <version>0.1.0</version>
  <description>The mission_planner UI package</description>

  <maintainer email="hashir@u.nus.edu">hashir</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>interface_protocol</build_depend>
  <build_depend>data_compresor</build_depend>
  <build_depend>wireless_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>data_compresor</build_export_depend>
  <build_export_depend>wireless_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>interface_protocol</exec_depend>
  <exec_depend>data_compresor</exec_depend>
  <exec_depend>wireless_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
